tests/ui/const-generics/issues/issue-88119.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/issue-88119.rs:4:30
   |
LL | #![feature(const_trait_impl, generic_const_exprs)]
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error: aborting due to 1 previous error

